[workspace]
resolver = "2"
members = ["queue-stopping"]

[workspace.dependencies]
ocs-compositor = { path = "./compositor" }
live_compositor = { git = "https://github.com/michael-dm/live-compositor.git", branch = "patch-wgpu-adapter", default-features = false }
compositor_pipeline = { git = "https://github.com/michael-dm/live-compositor.git", branch = "patch-wgpu-adapter" }
compositor_render = { git = "https://github.com/michael-dm/live-compositor.git", branch = "patch-wgpu-adapter" }

anyhow = "1.0.75"
tokio = "1.32.0"
thiserror = "1.0.49"
tracing = "0.1.37"
